package com.youcode.aptio.model;

public class Business {
}
