package com.youcode.aptio.model;

public class Employee {
}
