package com.youcode.aptio.model;

public class Payment {
}
