package com.youcode.aptio.model;

public class WorkingHours {
}
