classDiagram
    class User {
        -Long id
        -String username
        -String email
        -String password
        -String firstName
        -String lastName
        -String phone
        -LocalDateTime createdAt
        -boolean isActive
        +getters()
        +setters()
    }


    class Role {
        -Long id
        -String name
        -String description
        -LocalDateTime createdAt
        +getters()
        +setters()
    }

    class Business {
        -Long id
        -String name
        -String description
        -String address
        -String phone
        -String email
        -String timezone
        -SubscriptionPlan plan
        -List<Service> services
        -List<WorkingHours> workingHours
        -LocalDateTime createdAt
        +getters()
        +setters()
    }

    class SubscriptionPlan {
        <<enumeration>>
        FREE
        PAID
    }

    class Employee {
        -Long id
        -User user
        -Business business
        -String position
        -boolean isActive
        -LocalDateTime createdAt
        +getters()
        +setters()
    }

    class Service {
        -Long id
        -Business business
        -String name
        -String description
        -Integer duration
        -BigDecimal price
        -boolean isActive
        +getters()
        +setters()
    }

    class WorkingHours {
        -Long id
        -Business business
        -DayOfWeek day
        -LocalTime startTime
        -LocalTime endTime
        +getters()
        +setters()
    }

    class DayOfWeek {
        <<enumeration>>
        MONDAY
        TUESDAY
        WEDNESDAY
        THURSDAY
        FRIDAY
        SATURDAY
        SUNDAY
    }

    class Appointment {
        -Long id
        -User user
        -Service service
        -LocalDateTime startTime
        -LocalDateTime endTime
        -AppointmentStatus status
        -String notes
        -BigDecimal price
        -LocalDateTime createdAt
        +getters()
        +setters()
    }

    class AppointmentStatus {
        <<enumeration>>
        PENDING
        CONFIRMED
        CANCELLED
        COMPLETED
    }

    class Payment {
        -Long id
        -Appointment appointment
        -BigDecimal amount
        -PaymentStatus status
        -PaymentMethod method
        -String transactionId
        -LocalDateTime createdAt
        +getters()
        +setters()
        +processPayment()
        +generateInvoice()
    }

    class PaymentStatus {
        <<enumeration>>
        PENDING
        COMPLETED
        FAILED
    }

    class PaymentMethod {
        <<enumeration>>
        STRIPE
        PAYPAL
    }

    User "1..*" -- "0..*" Role
    User "1" -- "0..*" Employee
    Business "1" -- "0..*" Employee
    Business "1" -- "0..*" Service
    Business "1" -- "0..*" WorkingHours
    User "1" -- "0..*" Appointment
    Appointment "1" -- "0..*" Payment
    Service "1" -- "0..*" Appointment

    %% Enumerations relationships
    Appointment "1" -- "0..*" AppointmentStatus
    Payment "1" -- "0..*" PaymentStatus
    Payment "1" -- "0..*" PaymentMethod
    Business "1" -- "0..*" SubscriptionPlan
    WorkingHours "1" -- "0..*" DayOfWeek
